err/boxflow.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PIL'...
Listing './lib/python3.5/site-packages/PIL/.libs'...
Listing './lib/python3.5/site-packages/Pillow-5.0.0.dist-info'...
Listing './lib/python3.5/site-packages/boxflow'...
Listing './lib/python3.5/site-packages/boxflow/assets'...
Listing './lib/python3.5/site-packages/boxflow/js'...
Compiling './lib/python3.5/site-packages/boxflow/server.py'...
***   File "./lib/python3.5/site-packages/boxflow/server.py", line 38
    print 'connection closed'
                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/boxflow/static'...
Listing './lib/python3.5/site-packages/boxflow-0.0.1.egg-info'...
Listing './lib/python3.5/site-packages/holoviews'...
Listing './lib/python3.5/site-packages/holoviews/core'...
Listing './lib/python3.5/site-packages/holoviews/core/data'...
Listing './lib/python3.5/site-packages/holoviews/element'...
Listing './lib/python3.5/site-packages/holoviews/examples'...
Listing './lib/python3.5/site-packages/holoviews/examples/assets'...
Listing './lib/python3.5/site-packages/holoviews/examples/gallery'...
Listing './lib/python3.5/site-packages/holoviews/examples/gallery/demos'...
Listing './lib/python3.5/site-packages/holoviews/examples/gallery/demos/bokeh'...
Listing './lib/python3.5/site-packages/holoviews/examples/gallery/demos/matplotlib'...
Listing './lib/python3.5/site-packages/holoviews/examples/gallery/demos/plotly'...
Listing './lib/python3.5/site-packages/holoviews/examples/getting_started'...
Listing './lib/python3.5/site-packages/holoviews/examples/reference'...
Listing './lib/python3.5/site-packages/holoviews/examples/reference/containers'...
Listing './lib/python3.5/site-packages/holoviews/examples/reference/containers/bokeh'...
Listing './lib/python3.5/site-packages/holoviews/examples/reference/containers/matplotlib'...
Listing './lib/python3.5/site-packages/holoviews/examples/reference/elements'...
Listing './lib/python3.5/site-packages/holoviews/examples/reference/elements/assets'...
Listing './lib/python3.5/site-packages/holoviews/examples/reference/elements/bokeh'...
Listing './lib/python3.5/site-packages/holoviews/examples/reference/elements/matplotlib'...
Listing './lib/python3.5/site-packages/holoviews/examples/reference/elements/plotly'...
Listing './lib/python3.5/site-packages/holoviews/examples/reference/features'...
Listing './lib/python3.5/site-packages/holoviews/examples/reference/features/bokeh'...
Listing './lib/python3.5/site-packages/holoviews/examples/reference/streams'...
Listing './lib/python3.5/site-packages/holoviews/examples/reference/streams/bokeh'...
Listing './lib/python3.5/site-packages/holoviews/examples/topics'...
Listing './lib/python3.5/site-packages/holoviews/examples/topics/geometry'...
Listing './lib/python3.5/site-packages/holoviews/examples/topics/simulation'...
Listing './lib/python3.5/site-packages/holoviews/examples/user_guide'...
Listing './lib/python3.5/site-packages/holoviews/ipython'...
Listing './lib/python3.5/site-packages/holoviews/operation'...
Listing './lib/python3.5/site-packages/holoviews/plotting'...
Listing './lib/python3.5/site-packages/holoviews/plotting/bokeh'...
Listing './lib/python3.5/site-packages/holoviews/plotting/mpl'...
Listing './lib/python3.5/site-packages/holoviews/plotting/plotly'...
Listing './lib/python3.5/site-packages/holoviews/plotting/widgets'...
Listing './lib/python3.5/site-packages/holoviews/util'...
Listing './lib/python3.5/site-packages/holoviews-1.9.2.egg-info'...
Listing './lib/python3.5/site-packages/imagen'...
Listing './lib/python3.5/site-packages/imagen/transferfn'...
Listing './lib/python3.5/site-packages/imagen-2.1.0.egg-info'...
Listing './lib/python3.5/site-packages/numbergen'...
Listing './lib/python3.5/site-packages/numpy'...
Listing './lib/python3.5/site-packages/numpy/.libs'...
Listing './lib/python3.5/site-packages/numpy/compat'...
Listing './lib/python3.5/site-packages/numpy/core'...
Listing './lib/python3.5/site-packages/numpy/core/include'...
Listing './lib/python3.5/site-packages/numpy/core/include/numpy'...
Listing './lib/python3.5/site-packages/numpy/core/lib'...
Listing './lib/python3.5/site-packages/numpy/core/lib/npy-pkg-config'...
Listing './lib/python3.5/site-packages/numpy/core/tests'...
Listing './lib/python3.5/site-packages/numpy/core/tests/data'...
Listing './lib/python3.5/site-packages/numpy/distutils'...
Listing './lib/python3.5/site-packages/numpy/distutils/command'...
Listing './lib/python3.5/site-packages/numpy/distutils/fcompiler'...
Listing './lib/python3.5/site-packages/numpy/distutils/mingw'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests'...
Listing './lib/python3.5/site-packages/numpy/doc'...
Listing './lib/python3.5/site-packages/numpy/f2py'...
Listing './lib/python3.5/site-packages/numpy/f2py/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/array_from_pyobj'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/assumed_shape'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/common'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/kind'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/mixed'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/parameter'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/regression'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/size'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/string'...
Listing './lib/python3.5/site-packages/numpy/fft'...
Listing './lib/python3.5/site-packages/numpy/fft/tests'...
Listing './lib/python3.5/site-packages/numpy/lib'...
Listing './lib/python3.5/site-packages/numpy/lib/tests'...
Listing './lib/python3.5/site-packages/numpy/lib/tests/data'...
Listing './lib/python3.5/site-packages/numpy/linalg'...
Listing './lib/python3.5/site-packages/numpy/linalg/tests'...
Listing './lib/python3.5/site-packages/numpy/ma'...
Listing './lib/python3.5/site-packages/numpy/ma/tests'...
Listing './lib/python3.5/site-packages/numpy/matrixlib'...
Listing './lib/python3.5/site-packages/numpy/matrixlib/tests'...
Listing './lib/python3.5/site-packages/numpy/polynomial'...
Listing './lib/python3.5/site-packages/numpy/polynomial/tests'...
Listing './lib/python3.5/site-packages/numpy/random'...
Listing './lib/python3.5/site-packages/numpy/random/tests'...
Listing './lib/python3.5/site-packages/numpy/testing'...
Listing './lib/python3.5/site-packages/numpy/testing/nose_tools'...
Listing './lib/python3.5/site-packages/numpy/testing/tests'...
Listing './lib/python3.5/site-packages/numpy/tests'...
Listing './lib/python3.5/site-packages/numpy-1.14.0.dist-info'...
Listing './lib/python3.5/site-packages/param'...
Listing './lib/python3.5/site-packages/param-1.5.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tornado'...
Listing './lib/python3.5/site-packages/tornado/platform'...
Listing './lib/python3.5/site-packages/tornado/test'...
Listing './lib/python3.5/site-packages/tornado/test/csv_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/tornado/test/static'...
Listing './lib/python3.5/site-packages/tornado/test/static/dir'...
Listing './lib/python3.5/site-packages/tornado/test/templates'...
Listing './lib/python3.5/site-packages/tornado-4.5.3.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
